fix: Aligned to center

--- a/styles/style.css
+++ b/styles/style.css
@@ -98,10 +98,13 @@
   flex-direction: column;
   gap: 2em;
   justify-content: center;
+  margin-top: 95px;
+  left: 50%;
+ 
 }
 .word-wrapper{
   display: flex;
-  justify-content: flex-start;
+  justify-content:flex-start;
   align-items: center;
 }
 .word-meaning {
@@ -111,6 +114,8 @@
   max-width: 100%;
   display: flex;
   flex-direction: column;
+
+  align-items: center;
   gap: 1em;
   padding: 10px 15px;
   border-radius: 5px;
@@ -146,6 +151,7 @@
   font-size:1rem;
   color: #f5f5f5;
   margin-left: 2vw;
+  justify-content: center;
 }
 .example ul{
   list-style: none;
@@ -218,14 +224,14 @@ body {
   display: none;
   margin: auto;
   width: 80px;
-  height: 80px;
+  height: 100px;
 }
 .lds-ring div {
   box-sizing: border-box;
   display: block;
   position: absolute;
   width: 64px;
-  height: 64px;
+  height: 80px;
   margin: 8px;
   border: 8px solid #5f4a5b;
   border-radius: 50%;
@@ -287,6 +293,7 @@ body {
   .main #word {
     font-size: 50px;
     margin-bottom: 20px;
+    margin-top: 75px;
 
   }
 
@@ -351,3 +358,21 @@ body {
     font-size: 20px;
   }
 } 
+.middle{
+  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-top: 90px;
+
+}
+.searchMiddle{
+  position: absolute;
+ 
+  z-index: 15;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  
+}
